# sensor-data-processing

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  PROJECT_OVERVIEW.md  README.md  build.sh
data/: sensor_data.csv
include/: DataIngester.h  SensorDataProcessor.h  SensorReading.h
src/: DataIngester.cpp  SensorDataProcessor.cpp  SensorReading.cpp  main.cpp
tests/: test_SensorDataProcessor.cpp  test_SensorDataProcessor.h  test_SensorReading.cpp  test_SensorReading.h  test_main.cpp
